@@ -1,14 +1,19 @@
 package org.folio.rest.api;
 
+import static java.util.Collections.emptyList;
 import static org.folio.rest.impl.ServicePointApi.SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_BEING_PICKUP_LOC;
 import static org.folio.rest.impl.ServicePointApi.SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_HOLD_EXPIRY;
 import static org.folio.rest.support.http.InterfaceUrls.servicePointsUrl;
 import static org.folio.rest.support.http.InterfaceUrls.servicePointsUsersUrl;
 import static org.folio.utility.LocationUtility.createServicePoint;
+import static org.folio.utility.RestUtility.TENANT_ID;
 import static org.folio.utility.RestUtility.send;
+import static org.hamcrest.CoreMatchers.hasItems;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasItem;
+import static org.hamcrest.Matchers.hasSize;
 
 import io.vertx.core.http.HttpMethod;
 import io.vertx.core.json.Json;
@@ -23,19 +28,22 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import junitparams.JUnitParamsRunner;
+import junitparams.Parameters;
 import lombok.SneakyThrows;
+import org.folio.HttpStatus;
 import org.folio.rest.jaxrs.model.HoldShelfExpiryPeriod;
 import org.folio.rest.jaxrs.model.Servicepoint;
 import org.folio.rest.jaxrs.model.StaffSlip;
-import org.folio.rest.support.AdditionalHttpStatusCodes;
 import org.folio.rest.support.Response;
 import org.folio.rest.support.ResponseHandler;
 import org.folio.rest.support.messages.ServicePointEventMessageChecks;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
 
+@RunWith(JUnitParamsRunner.class)
 public class ServicePointTest extends TestBase {
-  private static final String SUPPORTED_CONTENT_TYPE_JSON_DEF = "application/json";
   private final ServicePointEventMessageChecks servicePointEventMessageChecks =
     new ServicePointEventMessageChecks(KAFKA_CONSUMER);
 
@@ -74,6 +82,7 @@ public class ServicePointTest extends TestBase {
     assertThat(response.getJson().getString("id"), notNullValue());
     assertThat(response.getJson().getString("code"), is("cd1"));
     assertThat(response.getJson().getString("name"), is("Circ Desk 1"));
+    assertThat(response.getJson().getBoolean("ecsRequestRouting"), is(false));
   }
 
   @Test
@@ -85,7 +94,7 @@ public class ServicePointTest extends TestBase {
     Response response = createServicePoint(null, null, "cd1",
       "Circulation Desk -- Hallway", null,
       20, true, createHoldShelfExpiryPeriod());
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HttpStatus.HTTP_UNPROCESSABLE_ENTITY.toInt()));
   }
 
   @Test
@@ -97,7 +106,7 @@ public class ServicePointTest extends TestBase {
     Response response = createServicePoint(null, "Circ Desk 103", null,
       "Circulation Desk -- Hallway", null,
       20, true, createHoldShelfExpiryPeriod());
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HttpStatus.HTTP_UNPROCESSABLE_ENTITY.toInt()));
   }
 
   @Test
@@ -108,7 +117,7 @@ public class ServicePointTest extends TestBase {
     MalformedURLException {
     Response response = createServicePoint(null, "Circ Desk 1", "cd1",
       null, null, 20, true, createHoldShelfExpiryPeriod());
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HttpStatus.HTTP_UNPROCESSABLE_ENTITY.toInt()));
   }
 
   @Test
@@ -121,7 +130,7 @@ public class ServicePointTest extends TestBase {
       "Circulation Desk -- Hallway", null, 20, true, createHoldShelfExpiryPeriod());
     Response response = createServicePoint(null, "Circ Desk 1", "cd2",
       "Circulation Desk -- Bathroom", null, 20, true, createHoldShelfExpiryPeriod());
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HttpStatus.HTTP_UNPROCESSABLE_ENTITY.toInt()));
   }
 
   @Test
@@ -507,7 +516,7 @@ public class ServicePointTest extends TestBase {
     assertThat(errorsArray.size(), is(1));
     JsonObject errorObject = errorsArray.getJsonObject(0);
     assertThat(errorObject.getString("message"), is(SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_HOLD_EXPIRY));
-    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint, responseJson);
+    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint);
   }
 
   @Test
@@ -535,7 +544,7 @@ public class ServicePointTest extends TestBase {
     assertThat(errorsArray.size(), is(1));
     JsonObject errorObject = errorsArray.getJsonObject(0);
     assertThat(errorObject.getString("message"), is(SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_HOLD_EXPIRY));
-    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint, responseJson);
+    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint);
   }
 
   @Test
@@ -566,7 +575,7 @@ public class ServicePointTest extends TestBase {
     assertThat(errorsArray.size(), is(1));
     JsonObject errorObject = errorsArray.getJsonObject(0);
     assertThat(errorObject.getString("message"), is(SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_BEING_PICKUP_LOC));
-    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint, responseJson);
+    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint);
   }
 
   @Test
@@ -597,7 +606,7 @@ public class ServicePointTest extends TestBase {
     assertThat(errorsArray.size(), is(1));
     JsonObject errorObject = errorsArray.getJsonObject(0);
     assertThat(errorObject.getString("message"), is(SERVICE_POINT_CREATE_ERR_MSG_WITHOUT_BEING_PICKUP_LOC));
-    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint, responseJson);
+    servicePointEventMessageChecks.updatedMessageWasNotPublished(createdServicePoint);
   }
 
   @Test
@@ -711,6 +720,44 @@ public class ServicePointTest extends TestBase {
   }
 
   @Test
+  @Parameters({
+    "false, ", // no query parameters
+    "false, ?query=cql.allRecords=1%20sortby%20name&limit=1000",
+    "false, ?includeRoutingServicePoints=false",
+    "true,  ?includeRoutingServicePoints=true",
+    "false, ?includeRoutingServicePoints=false&query=cql.allRecords=1%20sortby%20name&limit=1000",
+    "true,  ?includeRoutingServicePoints=true&query=cql.allRecords=1%20sortby%20name&limit=1000"
+  })
+  public void ecsRequestRoutingServicePointsAreReturnedOnlyWhenExplicitlyRequested(
+    boolean shouldReturnRoutingServicePoints, String queryParameters) throws Exception {
+
+    UUID regularServicePointId1 = UUID.randomUUID();
+    UUID regularServicePointId2 = UUID.randomUUID();
+    UUID routingServicePointId = UUID.randomUUID();
+
+    createServicePoint(regularServicePointId1, "Circ Desk 1", "cd1", "Circulation Desk 1",
+      null, 20, true, createHoldShelfExpiryPeriod(), emptyList(), null, TENANT_ID);
+    createServicePoint(regularServicePointId2, "Circ Desk 2", "cd2", "Circulation Desk 2",
+      null, 20, true, createHoldShelfExpiryPeriod(), emptyList(), false, TENANT_ID);
+    createServicePoint(routingServicePointId, "Circ Desk 3", "cd3", "Circulation Desk 3",
+      null, 20, true, createHoldShelfExpiryPeriod(), emptyList(), true, TENANT_ID);
+
+    List<String> servicePointIds = get(queryParameters)
+      .stream()
+      .map(json -> json.getString("id"))
+      .toList();
+
+    assertThat(servicePointIds,
+      hasItems(regularServicePointId1.toString(), regularServicePointId2.toString()));
+    if (shouldReturnRoutingServicePoints) {
+      assertThat(servicePointIds, hasItem(routingServicePointId.toString()));
+      assertThat(servicePointIds, hasSize(3));
+    } else {
+      assertThat(servicePointIds, hasSize(2));
+    }
+  }
+
+  @Test
   public void canUpdateServicePointWithStaffSlips() throws InterruptedException,
     ExecutionException, TimeoutException, MalformedURLException {
 
@@ -758,30 +805,35 @@ public class ServicePointTest extends TestBase {
     final List<JsonObject> servicePoints = getMany("pickupLocation==true");
 
     assertThat(servicePoints.size(), is(1));
-    assertThat(servicePoints.get(0).getString("id"),
+    assertThat(servicePoints.getFirst().getString("id"),
       is(pickupLocationServicePointId.toString()));
   }
 
   private List<JsonObject> getMany(String cql, Object... args) throws InterruptedException,
     ExecutionException, TimeoutException {
 
+    return get("?query=" + String.format(cql, args));
+  }
+
+  private List<JsonObject> get(String queryParams) throws InterruptedException,
+    ExecutionException, TimeoutException {
+
     final CompletableFuture<Response> getCompleted = new CompletableFuture<>();
 
-    send(servicePointsUrl("?query=" + String.format(cql, args)),
+    send(servicePointsUrl(queryParams),
       HttpMethod.GET, null, SUPPORTED_CONTENT_TYPE_JSON_DEF,
       ResponseHandler.json(getCompleted));
 
     return getCompleted.get(TIMEOUT, TimeUnit.SECONDS).getJson()
       .getJsonArray("servicepoints").stream()
-      .map(obj -> (JsonObject) obj)
+      .map(JsonObject.class::cast)
       .toList();
   }
 
   private Response getById(UUID id)
     throws InterruptedException,
     ExecutionException,
-    TimeoutException,
-    MalformedURLException {
+    TimeoutException {
 
     CompletableFuture<Response> getCompleted = new CompletableFuture<>();
 
